vbnc/vbnc/vbnc/tests/Errors/30060-1.vb
Class T
    Const M_Byte_Char As SByte = "#1/1/2008#"
End Class